<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/bhuj"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/dhanurasana"
        android:scaleType="fitCenter"
        android:src="@drawable/bhujangasana"
        app:layout_constraintRight_toLeftOf="@id/dhanur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dhanur"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/dhanur"
        android:scaleType="fitCenter"
        android:src="@drawable/dhanurasana"
        app:layout_constraintRight_toLeftOf="@id/nauka"
        app:layout_constraintStart_toEndOf="@id/bhuj"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nauka"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/nauka"
        android:scaleType="fitCenter"
        android:src="@drawable/naukasana"
        app:layout_constraintRight_toLeftOf="@id/vakra"
        app:layout_constraintStart_toEndOf="@id/dhanur"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/vakra"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/vakrasana"
        android:scaleType="fitCenter"
        android:src="@drawable/vakrasana"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/nauka"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/yoga"
        android:layout_width="322dp"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bhuj" />

    <TextView
        android:id="@+id/yogatext"
        android:layout_width="294dp"
        android:layout_height="232dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yoga" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:contentDescription="@string/heading"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="382dp"
        app:layout_constraintTop_toBottomOf="@id/yoga"
        app:layout_constraintBottom_toTopOf="@id/yogatext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>